...
                    viewModel.createUserWithCredentials(
                        AuthUser(email.value, password.value)
                    )

                }, modifier = modifier
                    .fillMaxWidth()
                    .testTag("register_button"),
                colors = ButtonDefaults.buttonColors(
                    backgroundColor = Color.Black,
                    contentColor = Color.White
                )
            ) {
                Text(text = "REGISTER", modifier = modifier.padding(vertical = 8.dp))
...
